# pdi-credit-risk-ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-cloudrun.yml
api/: app.py
notebooks/: 01_eda_credit_g.ipynb
reports/: baseline_logistic_regression.md
scripts/: download_credit_g.py  train_model.py
src/api/: __init__.py  app.py  demo_profiles.py  schemas.py
src/credit_g_ml/: __init__.py  config.py  data_loading.py  evaluation.py  inference.py  metadata.py  modeling.py  preprocessing.py  schemas.py
tests/: test_api.py  test_modeling.py  test_preprocessing.py
ui/static/css/: style.css
ui/static/js/: main.js
ui/templates/: demo_full.html  index.html
ui/templates/partials/: badges.html  bars.html  gauge.html
